# LeftoverLocalsRelease

./: README.md
AppleApp/: README.md
AppleApp/CovertListener/CovertListener/: ContentView.swift  CovertListenerApp.swift  Listener.metal
AppleApp/CovertListener/CovertListener.xcodeproj/: project.pbxproj
AppleApp/CovertListener/CovertListener.xcodeproj/xcuserdata/tylersorensen.xcuserdatad/xcschemes/: xcschememanagement.plist
AppleApp/CovertWriter/CovertWriter/: ContentView.swift  CovertWriterApp.swift  Writer.metal
AppleApp/CovertWriter/CovertWriter.xcodeproj/: project.pbxproj
OpenCLCLI/: README.md
OpenCLCLI/covertCLListener/: Makefile  covertCLListener.cl  covertCLListener.cpp
OpenCLCLI/covertCLWriter/: Makefile  covertCLWriter.cl  covertCLWriter.cpp
PoCLLMAttack/: README.md
PoCLLMAttack/llama.cpp/: Makefile  count.txt  ggml-opencl.cpp  ggml.c  llama.cpp  llama.h  requirements.txt
PoCLLMAttack/llama.cpp/examples/clCovertListener/: Makefile  covertCLListener.cl  covertCLListener.cpp
PoCLLMAttack/llama.cpp/examples/main/: main.cpp
PoCLLMAttack/llama.cpp/spm-headers/: ggml.h
VulkanAndroid/: README.md
VulkanAndroid/covertVKListener/: local.properties
VulkanAndroid/covertVKListener/app/: build.gradle
VulkanAndroid/covertVKListener/app/src/main/: AndroidManifest.xml
VulkanAndroid/covertVKListener/app/src/main/cpp/: CMakeLists.txt  cppListener.cpp  easyvk.cpp  easyvk.h
VulkanAndroid/covertVKWriter/app/: build.gradle
VulkanAndroid/covertVKWriter/app/src/main/: AndroidManifest.xml
VulkanAndroid/covertVKWriter/app/src/main/cpp/: CMakeLists.txt  CovertVKWriter.cpp  easyvk.cpp
VulkanAndroid/kernels/: common.h  covertListener.cl  covertWriter.cl  updateKernels.sh
VulkanCLI/: README.md
VulkanCLI/covertListener/: CMakeLists.txt  Makefile  common.h  covertListener.cl  covertListener.cpp
VulkanCLI/covertListener/spir-v/: covertListener.cinit  covertListener.spv
VulkanCLI/covertWriter/: CMakeLists.txt  Makefile  covertWriter.cl  covertWriter.cpp
VulkanCLI/covertWriter/spir-v/: covertWriter.cinit  covertWriter.spv
WebGPUListener/: README.md  index.html
WebGPUListener/src/: main.js
ext/easyvk/: easyvk.cpp  easyvk.h
(+12 files in other folders)
